# encode-app

./: .blueprint.db-shm  .blueprint.db-wal  .blueprint.html  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DESIGN.md  LOCAL-AI-SETUP.md  PLAN.md  PROMPTS.md  README.md  biome.json  blueprint.html  index.html  lefthook.yml  package-lock.json  package.json  plancodex.md  vite.config.ts  vitest.config.ts
.claude/: settings 2.json
.playwright-mcp/: page-2026-03-31T23-18-01-310Z.yml
research/: editor-command-audit.md  gaps-and-priorities.md  how-to-learn.md  learning-methods-audit.md  learning-strategy-audit.md  learning_method2.md  obsidian-features.md  ui-graphite-spec.md
scripts/: encode-claude-cli.ps1  encode-claude-cli.sh  encode-codex-cli.ps1  encode-codex-cli.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_foundation 2.sql  001_initial.sql  002_section_status 2.sql  002_study_sessions.sql  003_file_status.sql  003_teachback_miss_source.sql  004_analysis_cache.sql  004_notes.sql  005_ai_generated_source 2.sql  006_ai_inline_source.sql  007_chapter_raw_markdown.sql  008_study_notes.sql
src-tauri/src/: ai.rs  db.rs  importer.rs  indexer.rs  lib.rs  vault.rs
src-tauri/src/commands/: ai 2.rs  ai.rs  cards.rs  export.rs  library 2.rs  library.rs  mod.rs  notes 2.rs  notes.rs  pathway 2.rs  pathway.rs  queue.rs  quiz.rs  reader.rs  review.rs  teachback.rs  ui_state.rs
src-tauri/src/db/: migrations 2.rs  migrations.rs  mod 2.rs  mod.rs
src-tauri/src/services/: ai.rs  cards 2.rs  cards.rs  chapter.rs  chunker.rs  config.rs  exporter.rs  fsrs.rs  importer 2.rs  importer.rs  indexer 2.rs  indexer.rs  mod.rs  note_links.rs  notes 2.rs  notes.rs  pathway.rs  queue 2.rs  queue.rs  quiz.rs  reader 2.rs  reader.rs  review 2.rs  review.rs  snapshot.rs  teachback.rs  vault_fs 2.rs  vault_fs.rs
src-tauri/tests/: integration_flow.rs
(+195 files in other folders)
