[package]
name = "encode"
version = "0.8.0"
description = "Encode — Study Environment + Structured Knowledge Vault"
authors = ["Samieh"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
notify = "8"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
