[package]
name = "encode"
version = "2.0.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
dirs = "6"

# Staged for Epic 1.4 (Import, Library, search) and Epic 1.5 (indexing, file watcher)
chrono = { version = "0.4", features = ["serde"] }  # timestamp formatting in import/export
regex = "1"                                          # HTML-to-markdown import parsing
walkdir = "2"                                        # vault directory scanning for indexer
notify = "8"                                         # file watcher for incremental index

[dev-dependencies]
tempfile = "3"
